--- a/doc/主机管理.md
+++ b/doc/主机管理.md
@@ -1,9 +1,9 @@
 ## 主机管理
 
-##### **功能介绍:**  
+#### **功能介绍:**  
 主机信息的增删改查  
 
-##### **接口介绍:**  
+#### **接口介绍:**  
 主机管理功能有4个接口  
 创建主机接口  
 删除主机接口  
@@ -22,7 +22,7 @@ createHost
 
 `接口类型：`
 
-```请求
+```
 POST
 /api/v1/createHost
 Content-Type:application/json
@@ -88,16 +88,15 @@ deleteHost
 
 `接口类型：`
 
-```请求
+```
 GET
 /api/v1/deleteHost
 ```
 
 `请求body`
 
-```http
+```
 http://0.0.0.0:15523/api/v1/deleteHost?id=928
-
 ```
 
 `请求字段解释`
@@ -144,9 +143,9 @@ updateHost
 
 `接口类型：`
 
-```请求
+```
 POST
-/api/v1/createHost
+/api/v1/updateHost
 Content-Type:application/json
 ```
 
@@ -189,7 +188,7 @@ remark|string|false| |备注
 ```json
 {
   "code": 500,
-  "message": "删除发生错误！{错误内容}",
+  "message": "修改发生错误！{错误内容}",
   "result": null
 }
 ```
@@ -219,7 +218,7 @@ GET
 
 `请求body`
 
-```http
+```
 {
   http://0.0.0.0:15523/api/v1/selectHostList?page=1
 }
