add config doc.

--- a/doc/主机管理.md
+++ b/doc/主机管理.md
@@ -1,9 +1,9 @@
 ## 主机管理
 
-#### **功能介绍:**  
+### **功能介绍:**  
 主机信息的增删改查  
 
-#### **接口介绍:**  
+### **接口介绍:**  
 主机管理功能有4个接口  
 创建主机接口  
 删除主机接口  
@@ -219,9 +219,7 @@ GET
 `请求body`
 
 ```
-{
-  http://0.0.0.0:15523/api/v1/selectHostList?page=1
-}
+http://0.0.0.0:15523/api/v1/selectHostList?page=1
 ```
 
 `请求字段解释`
