--- a/doc/配置管理.md
+++ b/doc/配置管理.md
@@ -1,9 +1,9 @@
 ## 配置管理
 
-### **能介绍:**  
+### **功能介绍**  
 配置信息的增删改查  
 
-### **接口介绍:**  
+### **接口介绍**  
 配置管理功能有4个接口  
 创建配置接口  
 删除配置接口  
@@ -113,7 +113,7 @@ Content-Type:application/json
 frontendPort|int|true||前端端口
 backendPort|int|true||后端端口
 alertType|string|true||告警类型，小写，取值范围【mail，weixin】
-alert||||
+alert //TODO 后面在写 ||||
 masterMem|int|true||master内存
 workerMem|int|true||worker内存
 databaseType|string|true||数据库类型，小写，取值范围【mysql，postgresql】
@@ -161,7 +161,7 @@ deleteConfig
 
 ```
 POST
-/api/v1/deleteHost
+/api/v1/deleteConfig
 Content-Type:application/json
 ```
 
@@ -409,3 +409,4 @@ page|int|true||分页
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
+无||||
