--- a/doc/backend/配置管理.md
+++ b/doc/backend/配置管理.md
@@ -1,7 +1,5 @@
 ## 配置管理
 
-[返回首页](../../)
-
 [返回目录](./README.md)
 
 ### **功能介绍**  
@@ -414,3 +412,6 @@ page|int|true||分页
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
 无||||
+
+
+[返回目录](./README.md)
