--- a/doc/backend/主机管理.md
+++ b/doc/backend/主机管理.md
@@ -1,7 +1,5 @@
 ## 主机管理
 
-[返回首页](../../)
-
 [返回目录](./README.md)
 
 ### **功能介绍**  
@@ -283,3 +281,6 @@ name|string| | |host的别名
 port|int| | |host的端口号，前端请控制端口号只能是1~65535区间
 root|string| | |host的root密码
 remark|string| | |备注
+
+
+[返回目录](./README.md)
