--- a/doc/backend/集群管理.md
+++ b/doc/backend/集群管理.md
@@ -1,7 +1,5 @@
 ## 集群管理
 
-[返回首页](../../)
-
 [返回目录](./README.md)
 
 ### **功能介绍**  
@@ -521,3 +519,6 @@ id|int|true||执行id
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
 无||||
+
+
+[返回目录](./README.md)
