Change doc and add yml tool.

--- a/doc/backend/配置管理.md
+++ b/doc/backend/配置管理.md
@@ -38,7 +38,8 @@ Content-Type:application/json
   "typ": "Frontend",
   "conf": {
     "frontendPort": 8888
-  }
+  },
+  "remark": "备注"
 }
 ```
 
@@ -50,7 +51,8 @@ Content-Type:application/json
   "typ": "Backend",
   "conf": {
     "backendPort": 12345
-  }
+  },
+  "remark": "备注"
 }
 ```
 
@@ -65,7 +67,8 @@ Content-Type:application/json
     "alert": {
       //TODO 后面再写
     }
-  }
+  },
+  "remark": "备注"
 }
 ```
 
@@ -77,7 +80,8 @@ Content-Type:application/json
   "typ": "Master",
   "conf": {
     "masterMem": 1
-  }
+  },
+  "remark": "备注"
 }
 ```
 
@@ -89,7 +93,8 @@ Content-Type:application/json
   "typ": "Worker",
   "conf": {
     "workerMem": 1
-  }
+  },
+  "remark": "备注"
 }
 ```
 
@@ -104,7 +109,8 @@ Content-Type:application/json
     "dbName": "easy",
     "account": "easy",
     "password": "easy"
-  }
+  },
+  "remark": "备注"
 }
 ```
 
@@ -122,6 +128,7 @@ databaseType|string|true||数据库类型，小写，取值范围【mysql，post
 dbName|string|true||数据库名，建议使用 dolphinscheduler
 account|stirng|true||数据库帐号
 password|string|true||数据库密码
+remark|string|false||备注
 
 `响应body` 成功逻辑
 
@@ -236,7 +243,8 @@ Content-Type:application/json
   "typ": "Frontend",
   "conf": {
     "frontendPort": 8888
-  }
+  },
+  "remark": "备注"
 }
 ```
 
@@ -249,7 +257,8 @@ Content-Type:application/json
   "typ": "Backend",
   "conf": {
     "backendPort": 12345
-  }
+  },
+  "remark": "备注"
 }
 ```
 
@@ -265,7 +274,8 @@ Content-Type:application/json
     "alert": {
       //TODO 后面再写
     }
-  }
+  },
+  "remark": "备注"
 }
 ```
 
@@ -278,7 +288,8 @@ Content-Type:application/json
   "typ": "Master",
   "conf": {
     "masterMem": 1
-  }
+  },
+  "remark": "备注"
 }
 ```
 
@@ -291,7 +302,8 @@ Content-Type:application/json
   "typ": "Worker",
   "conf": {
     "workerMem": 1
-  }
+  },
+  "remark": "备注"
 }
 ```
 
@@ -307,7 +319,8 @@ Content-Type:application/json
     "dbName": "easy",
     "account": "easy",
     "password": "easy"
-  }
+  },
+  "remark": "备注"
 }
 ```
 
@@ -326,7 +339,7 @@ databaseType|string|true||数据库类型，小写，取值范围【mysql，post
 dbName|string|true||数据库名，建议使用 dolphinscheduler
 account|stirng|true||数据库帐号
 password|string|true||数据库密码
-
+remark|string|false||备注
 
 `响应body` 成功逻辑
 
@@ -362,7 +375,9 @@ selectConfigList
 
 `解释：`
 
-查询配置信息，分页返回
+查询配置信息，分页返回，每页会返回全部的数据。
+这里前端的压力可能稍微大一点，后期迭代成（先返回列表，用户点了列表里的id，再用id去获取具体的数据）。
+
 
 `接口类型：`
 
@@ -392,7 +407,37 @@ page|int|true||分页
   "code": 200,
   "message": "ok",
   "result": {
-    //TODO 后面在写
+    "currentPage": 1,
+    "total": 3,
+    "data": [
+      {
+        "id": 123121,
+        "name": "my config 1",
+        "typ": "Frontend",
+        "conf": {
+          "frontendPort": 8888
+        },
+        "remark": "备注"
+      },
+      {
+        "id": 123122,
+        "name": "my config 2",
+        "typ": "Frontend",
+        "conf": {
+          "frontendPort": 8882
+        },
+        "remark": "备注"
+      },
+      {
+        "id": 123123,
+        "name": "my config 3",
+        "typ": "Frontend",
+        "conf": {
+          "frontendPort": 8881
+        },
+        "remark": "备注"
+      }
+    ]
   }
 }
 ```
@@ -411,7 +456,9 @@ page|int|true||分页
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-无||||
+currentPage|int|||当前页数
+total|int|||总配置数
+data|string|||日志内容
 
 
 [返回目录](./README.md)
