Add get exec signal.

--- a/doc/backend/集群管理.md
+++ b/doc/backend/集群管理.md
@@ -495,21 +495,23 @@ http://0.0.0.0:15523/api/v1/executeResultSignal?id=118
 --- | --- | --- | --- | ---
 id|int|true||执行id
 
-`响应body` 成功逻辑
+`响应body` 成功逻辑 表示程序执行 结束
 
 ```json
 {
   "code": 200,
   "message": "ok",
-  "result": "success"
+  "result": true
 }
 ```
 
+`响应body` 失败逻辑 表示程序执行 未结束
+
 ```json
 {
   "code": 200,
   "message": "ok",
-  "result": "failed"
+  "result": false
 }
 ```
 
