Adjust `cluster execution` position, zk config associated with ini.

--- a/doc/backend/集群管理.md
+++ b/doc/backend/集群管理.md
@@ -334,7 +334,7 @@ http://0.0.0.0:15523/api/v1/selectClusterList
 --- | --- | --- | --- | ---
 // TODO 后面再写
 
-## 启动/停止集群接口
+## 执行集群接口
 
 `英文名：`
 
@@ -359,7 +359,7 @@ Content-Type:application/json
 
 ```json
 {
-  "executeType": "start",
+  "executeType": 0,
   "clusterId": 127
 }
 ```
@@ -368,7 +368,7 @@ Content-Type:application/json
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-executeType|string|true||执行类型
+executeType|string|true||执行类型【0：启动集群】【1：停止集群】【2：部署集群】【3：升级集群】
 clusterId|int|true||集群id
 
 `响应body` 成功逻辑
