--- a/doc/backend/配置管理.md
+++ b/doc/backend/配置管理.md
@@ -30,38 +30,38 @@ POST
 Content-Type:application/json
 ```
 
-`请求body` Frontend逻辑
+`请求body` frontend逻辑
 
 ```json
 {
   "name": "my config 1",
-  "typ": "Frontend",
+  "typ": "frontend",
   "conf": {
-    "frontendPort": 8888
+    "escProxyPort": 8888
   },
   "remark": "备注"
 }
 ```
 
-`请求body` Backend逻辑
+`请求body` backend逻辑
 
 ```json
 {
   "name": "my config 1",
-  "typ": "Backend",
+  "typ": "backend",
   "conf": {
-    "backendPort": 12345
+    "serverPort": 12345
   },
   "remark": "备注"
 }
 ```
 
-`请求body` Alert逻辑
+`请求body` alert逻辑
 
 ```json
 {
   "name": "my config 1",
-  "typ": "Alert",
+  "typ": "alert",
   "conf": {
     "alertType": "mail",
     "alert": {
@@ -72,38 +72,38 @@ Content-Type:application/json
 }
 ```
 
-`请求body` Master逻辑
+`请求body` master逻辑
 
 ```json
 {
   "name": "my config 1",
-  "typ": "Master",
+  "typ": "master",
   "conf": {
-    "masterMem": 1
+    "masterReservedMemory": 1
   },
   "remark": "备注"
 }
 ```
 
-`请求body` Worker逻辑
+`请求body` worker逻辑
 
 ```json
 {
   "name": "my config 1",
-  "typ": "Worker",
+  "typ": "worker",
   "conf": {
-    "workerMem": 1
+    "workerReservedMemory": 1
   },
   "remark": "备注"
 }
 ```
 
-`请求body` Database逻辑
+`请求body` database逻辑
 
 ```json
 {
   "name": "my config 1",
-  "typ": "Database",
+  "typ": "database",
   "conf": {
     "databaseType": "mysql",
     "dbName": "easy",
@@ -118,17 +118,17 @@ Content-Type:application/json
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-frontendPort|int|true||前端端口
-backendPort|int|true||后端端口
-alertType|string|true||告警类型，小写，取值范围【mail，weixin】
-alert //TODO 后面在写 ||||
-masterMem|int|true||master内存
-workerMem|int|true||worker内存
-databaseType|string|true||数据库类型，小写，取值范围【mysql，postgresql】
-dbName|string|true||数据库名，建议使用 dolphinscheduler
-account|stirng|true||数据库帐号
-password|string|true||数据库密码
-remark|string|false||备注
+escProxyPort|int|true| |前端端口
+serverPort|int|true| |后端端口
+alertType|string|true| |告警类型，小写，取值范围【mail，weixin】
+alert //TODO 后面在写 | | | |
+masterReservedMemory|float|true| |master内存
+workerReservedMemory|float|true| |worker内存
+databaseType|string|true| |数据库类型，小写，取值范围【mysql，postgresql】
+dbName|string|true| |数据库名，建议使用 dolphinscheduler
+account|stirng|true| |数据库帐号
+password|string|true| |数据库密码
+remark|string|false| |备注
 
 `响应body` 成功逻辑
 
@@ -154,7 +154,7 @@ remark|string|false||备注
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-无||||
+无| | | | 
 
 ## 删除配置接口
 
@@ -178,7 +178,7 @@ Content-Type:application/json
 
 ```json
 {
-  "typ": "Database",
+  "typ": "database",
   "id": 12123
 }
 ```
@@ -187,8 +187,8 @@ Content-Type:application/json
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-typ|string|true||配置类型，小写，取值范围【frontend，backend，alert，master，worker，database】
-id|int|true||配置id
+typ|string|true| |配置类型，小写，取值范围【frontend，backend，alert，master，worker，database】
+id|int|true| |配置id
 
 `响应body` 成功逻辑
 
@@ -234,41 +234,41 @@ POST
 Content-Type:application/json
 ```
 
-`请求body` Frontend逻辑
+`请求body` frontend逻辑
 
 ```json
 {
-  "id": 123123,
+  "id": 1,
   "name": "my config 1",
-  "typ": "Frontend",
+  "typ": "frontend",
   "conf": {
-    "frontendPort": 8888
+    "escProxyPort": 8888
   },
   "remark": "备注"
 }
 ```
 
-`请求body` Backend逻辑
+`请求body` backend逻辑
 
 ```json
 {
-  "id": 123123,
+  "id": 1,
   "name": "my config 1",
-  "typ": "Backend",
+  "typ": "backend",
   "conf": {
-    "backendPort": 12345
+    "serverPort": 12345
   },
   "remark": "备注"
 }
 ```
 
-`请求body` Alert逻辑
+`请求body` alert逻辑
 
 ```json
 {
-  "id": 123123,
+  "id": 1,
   "name": "my config 1",
-  "typ": "Alert",
+  "typ": "alert",
   "conf": {
     "alertType": "mail",
     "alert": {
@@ -279,41 +279,41 @@ Content-Type:application/json
 }
 ```
 
-`请求body` Master逻辑
+`请求body` master逻辑
 
 ```json
 {
-  "id": 123123,
+  "id": 1,
   "name": "my config 1",
-  "typ": "Master",
+  "typ": "master",
   "conf": {
-    "masterMem": 1
+    "masterReservedMemory": 1
   },
   "remark": "备注"
 }
 ```
 
-`请求body` Worker逻辑
+`请求body` worker逻辑
 
 ```json
 {
-  "id": 123123,
+  "id": 1,
   "name": "my config 1",
-  "typ": "Worker",
+  "typ": "worker",
   "conf": {
-    "workerMem": 1
+    "workerReservedMemory": 1
   },
   "remark": "备注"
 }
 ```
 
-`请求body` Database逻辑
+`请求body` database逻辑
 
 ```json
 {
-  "id": 123123,
+  "id": 1,
   "name": "my config 1",
-  "typ": "Database",
+  "typ": "database",
   "conf": {
     "databaseType": "mysql",
     "dbName": "easy",
@@ -329,17 +329,17 @@ Content-Type:application/json
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
 id|int|true||配置id
-frontendPort|int|true||前端端口
-backendPort|int|true||后端端口
-alertType|string|true||告警类型，小写，取值范围【mail，weixin】
-alert||||
-masterMem|int|true||master内存
-workerMem|int|true||worker内存
-databaseType|string|true||数据库类型，小写，取值范围【mysql，postgresql】
-dbName|string|true||数据库名，建议使用 dolphinscheduler
-account|stirng|true||数据库帐号
-password|string|true||数据库密码
-remark|string|false||备注
+escProxyPort|int|true| |前端端口
+serverPort|int|true| |后端端口
+alertType|string|true| |告警类型，小写，取值范围【mail，weixin】
+alert //TODO 后面在写 | | | |
+masterReservedMemory|float|true| |master内存
+workerReservedMemory|float|true| |worker内存
+databaseType|string|true| |数据库类型，小写，取值范围【mysql，postgresql】
+dbName|string|true| |数据库名，建议使用 dolphinscheduler
+account|stirng|true| |数据库帐号
+password|string|true| |数据库密码
+remark|string|false| |备注
 
 `响应body` 成功逻辑
 
@@ -375,7 +375,13 @@ selectConfigList
 
 `解释：`
 
-查询配置信息，分页返回，每页会返回全部的数据。
+查询配置信息，分页返回。
+（后端偷懒下）
+每页会返回全部的数据。
+每页会返回全部的数据。
+每页会返回全部的数据。
+每页会返回全部的数据。
+由前端来控制显示列表，或，对应id的具体内容。
 这里前端的压力可能稍微大一点，后期迭代成（先返回列表，用户点了列表里的id，再用id去获取具体的数据）。
 
 
@@ -396,8 +402,8 @@ http://0.0.0.0:15523/api/v1/selectConfigList?typ=master&page=1
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-typ|string|true||配置类型，小写，取值范围【frontend，backend，alert，master，worker，database】
-page|int|true||分页
+typ|string|true| |配置类型，小写，取值范围【frontend，backend，alert，master，worker，database】
+page|int|true| |分页
 
 
 `响应body` 成功逻辑
@@ -413,7 +419,7 @@ page|int|true||分页
       {
         "id": 123121,
         "name": "my config 1",
-        "typ": "Frontend",
+        "typ": "frontend",
         "conf": {
           "frontendPort": 8888
         },
@@ -422,7 +428,7 @@ page|int|true||分页
       {
         "id": 123122,
         "name": "my config 2",
-        "typ": "Frontend",
+        "typ": "frontend",
         "conf": {
           "frontendPort": 8882
         },
@@ -431,7 +437,7 @@ page|int|true||分页
       {
         "id": 123123,
         "name": "my config 3",
-        "typ": "Frontend",
+        "typ": "frontend",
         "conf": {
           "frontendPort": 8881
         },
@@ -456,9 +462,9 @@ page|int|true||分页
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-currentPage|int|||当前页数
-total|int|||总配置数
-data|string|||日志内容
+currentPage|int| | |当前页数
+total|int| | |总配置数
+data|string| | |日志内容
 
 
 [返回目录](./README.md)
