--- a/doc/backend/主机管理.md
+++ b/doc/backend/主机管理.md
@@ -201,6 +201,77 @@ remark|string|false| |备注
 --- | --- | --- | --- | ---
 无 | | | |
 
+## 查询具体主机
+
+`英文名：`
+
+selectHost
+
+`解释：`
+
+分页返回主机列表
+
+`接口类型：`
+
+```
+POST
+/api/v1/selectHost
+Content-Type:application/json
+```
+
+`请求body`
+
+```
+{
+  "id": 1
+}
+```
+
+`请求字段解释`
+
+字段名|字段类型|是否必填|默认值|字段解释
+--- | --- | --- | --- | ---
+id|int|true| |主机id
+
+`响应body` 成功逻辑
+
+```json
+{
+  "code": 200,
+  "message": "ok",
+  "result": {
+    "id": "1",
+    "ip": "1.1.1.1",
+    "name": "hello",
+    "port": 22,
+    "root": "password",
+    "remark": "this is remark"
+  }
+}
+```
+
+`响应body` 失败逻辑
+
+```json
+{
+  "code": 500,
+  "message": "查询发生错误！{错误内容}",
+  "result": null
+}
+```
+
+`响应字段解释`
+
+字段名|字段类型|是否必填|默认值|字段解释
+--- | --- | --- | --- | ---
+id|int| | |host的id
+ip|string| | |host的ip地址
+name|string| | |host的别名
+port|int| | |host的端口号，前端请控制端口号只能是1~65535区间
+root|string| | |host的root密码
+remark|string| | |备注
+
+
 ## 查询主机列表接口
 
 `英文名：`
@@ -241,18 +312,16 @@ page|int|true| |分页数
     "total": 2,
     "hostInfo": [
       {
+        "id": "1",
         "ip": "1.1.1.1",
         "name": "hello",
-        "port": 22,
-        "root": "password",
-        "remark": "this is remark"
+        "remark": "备注",
       },
       {
-        "ip": "1.1.1.1",
-        "name": "hello",
-        "port": 22,
-        "root": "password",
-        "remark": "this is remark"
+        "id": "2",
+        "ip": "2.2.2.2",
+        "name": "world",
+        "remark": "备注",
       }
     ]
   }
@@ -278,8 +347,6 @@ total|int| | |host总数
 id|int| | |host的id
 ip|string| | |host的ip地址
 name|string| | |host的别名
-port|int| | |host的端口号，前端请控制端口号只能是1~65535区间
-root|string| | |host的root密码
 remark|string| | |备注
 
 
