--- a/doc/backend/配置管理.md
+++ b/doc/backend/配置管理.md
@@ -367,6 +367,85 @@ remark|string|false| |备注
 --- | --- | --- | --- | ---
 无||||
 
+## 查询具体配置
+
+`英文名：`
+
+selectConfig
+
+`解释：`
+根据配置id和类型去查询具体配置信息
+
+`接口类型：`
+
+```
+POST
+/api/v1/selectConfig
+Content-Type:application/json
+```
+
+`请求body`
+
+```
+{
+  "typ": "frontend",
+  "id": 12123
+}
+```
+`请求字段解释`
+
+字段名|字段类型|是否必填|默认值|字段解释
+--- | --- | --- | --- | ---
+typ|string|true| |配置类型，小写，取值范围【frontend，backend，alert，master，worker，database】
+id|int|true| |配置id
+
+`响应body` 成功逻辑
+
+```json
+{
+  "code": 200,
+  "message": "ok",
+  "result": {
+    "id": 12123,
+    "name": "my config 1",
+    "typ": "frontend",
+    "conf": {
+      "frontendPort": 8888
+    },
+    "remark": "备注"
+  }
+}
+```
+
+`响应body` 失败逻辑
+
+```json
+{
+  "code": 500,
+  "message": "删除配置失败！{失败内容}",
+  "result": null
+}
+```
+
+`响应字段解释`
+
+字段名|字段类型|是否必填|默认值|字段解释
+--- | --- | --- | --- | ---
+id | int | | | 配置id
+name | string | | | 配置别名
+typ | string | | | 配置类型小写，取值范围【frontend，backend，alert，master，worker，database】
+escProxyPort|int|true| |前端端口
+serverPort|int|true| |后端端口
+alertType|string|true| |告警类型，小写，取值范围【mail，weixin】
+alert //TODO 后面在写 | | | |
+masterReservedMemory|float|true| |master内存
+workerReservedMemory|float|true| |worker内存
+databaseType|string|true| |数据库类型，小写，取值范围【mysql，postgresql】
+dbName|string|true| |数据库名，建议使用 dolphinscheduler
+account|stirng|true| |数据库帐号
+password|string|true| |数据库密码
+remark|string|false| |备注
+
 ## 查询配置列表接口
 
 `英文名：`
@@ -375,15 +454,7 @@ selectConfigList
 
 `解释：`
 
-查询配置信息，分页返回。
-（后端偷懒下）
-每页会返回全部的数据。
-每页会返回全部的数据。
-每页会返回全部的数据。
-每页会返回全部的数据。
-由前端来控制显示列表，或，对应id的具体内容。
-这里前端的压力可能稍微大一点，后期迭代成（先返回列表，用户点了列表里的id，再用id去获取具体的数据）。
-
+查询配置信息，分页返回列表信息。
 
 `接口类型：`
 
@@ -419,28 +490,16 @@ page|int|true| |分页
       {
         "id": 123121,
         "name": "my config 1",
-        "typ": "frontend",
-        "conf": {
-          "frontendPort": 8888
-        },
         "remark": "备注"
       },
       {
         "id": 123122,
         "name": "my config 2",
-        "typ": "frontend",
-        "conf": {
-          "frontendPort": 8882
-        },
         "remark": "备注"
       },
       {
         "id": 123123,
         "name": "my config 3",
-        "typ": "frontend",
-        "conf": {
-          "frontendPort": 8881
-        },
         "remark": "备注"
       }
     ]
