--- a/doc/backend/集群管理.md
+++ b/doc/backend/集群管理.md
@@ -56,12 +56,12 @@ Content-Type:application/json
     {
       "roleName": "backend",
       "dependHostId": 12,
-      "backendPort": 12345
+      "serverPort": 12345
     },
     {
       "roleName": "frontend",
       "dependHostId": 12,
-      "frontendPort": 8888
+      "escProxyPort": 8888
     },
     {
       "roleName": "database",
@@ -74,12 +74,12 @@ Content-Type:application/json
     {
       "roleName": "master",
       "dependHostId": 12,
-      "masterMem": 1
+      "masterReservedMemory": 1
     },
     {
       "roleName": "worker",
       "dependHostId": 12,
-      "workerMem": 1
+      "workerReservedMemory": 1
     },
     {
       // TODO 其他角色后面再写
@@ -178,6 +178,112 @@ id|int|true||集群id
 --- | --- | --- | --- | ---
 无||||
 
+## 查询具体集群
+
+`英文名：`
+
+selectCluster
+
+`解释：`
+
+根据集群id，返回集群信息
+
+`接口类型：`
+
+```
+POST
+/api/v1/selectCluster
+Content-Type:application/json
+```
+
+`请求body`
+
+```json
+{
+  "id": 1
+}
+```
+
+`请求字段解释`
+
+字段名|字段类型|是否必填|默认值|字段解释
+--- | --- | --- | --- | ---
+id | int | true | | 集群id
+
+`响应body` 成功逻辑
+
+```json
+{
+  "code": 200,
+  "message": "ok",
+  "result": {
+    "id": 1,
+    "name": "my cluster 1",
+    "status": 1,
+    "hosts": [
+      {
+        "id": 289
+      },
+      {
+        "id": 28
+      }
+    ],
+    "base": {
+      "version": "1.2.0",
+      "deployUser": "easy",
+      "deployPath": "/home/easy"
+    },
+    "roles": [
+      {
+        "roleName": "backend",
+        "dependHostId": 12,
+        "serverPort": 12345
+      },
+      {
+        "roleName": "frontend",
+        "dependHostId": 12,
+        "escProxyPort": 8888
+      },
+      {
+        "roleName": "database",
+        "dependHostId": 12,
+        "databaseType": "mysql",
+        "dbName": "easy",
+        "account": "easy",
+        "password": "easy"
+      },
+      {
+        "roleName": "master",
+        "dependHostId": 12,
+        "masterReservedMemory": 1
+      },
+      {
+        "roleName": "worker",
+        "dependHostId": 12,
+        "workerReservedMemory": 1
+      },
+      {}
+    ]
+  }
+}
+```
+
+`响应body` 失败逻辑
+
+```json
+{
+  "code": 500,
+  "message": "查询失败！｛错误内容｝",
+  "result": null
+}
+```
+
+`响应字段解释`
+
+字段名|字段类型|是否必填|默认值|字段解释
+--- | --- | --- | --- | ---
+// TODO 后面再写
+
 ## 查询集群列表接口
 
 `英文名：`
@@ -186,15 +292,14 @@ selectClusterList
 
 `解释：`
 
-查询集群列表，会返回全部集群的数据。
-供集群管理页面左侧切换使用，这里前端的压力可能稍微大一点，后期迭代成（先返回列表，用户点了列表里的id，再用id去获取具体的数据）。
+查询集群列表，返回集群列表信息。根据列表中的id去查询对应的集群信息。
+页面初始化的时候调用该接口，获取列表中带有默认的id，由此来显示默认集群信息。
 
 `接口类型：`
 
 ```
 GET
 /api/v1/selectClusterList
-Content-Type:application/json
 ```
 
 `请求body`
@@ -219,100 +324,12 @@ http://0.0.0.0:15523/api/v1/selectClusterList
     {
       "id": 1,
       "name": "my cluster 1",
-      "status": 1,
-      "hosts": [
-        {
-          "id": 289
-        },
-        {
-          "id": 28
-        }
-      ],
-      "base": {
-        "version": "1.2.0",
-        "deployUser": "easy",
-        "deployPath": "/home/easy"
-      },
-      "roles": [
-        {
-          "roleName": "backend",
-          "dependHostId": 12,
-          "backendPort": 12345
-        },
-        {
-          "roleName": "frontend",
-          "dependHostId": 12,
-          "frontendPort": 8888
-        },
-        {
-          "roleName": "database",
-          "dependHostId": 12,
-          "databaseType": "mysql",
-          "dbName": "easy",
-          "account": "easy",
-          "password": "easy"
-        },
-        {
-          "roleName": "master",
-          "dependHostId": 12,
-          "masterMem": 1
-        },
-        {
-          "roleName": "worker",
-          "dependHostId": 12,
-          "workerMem": 1
-        },
-        {}
-      ]
+      "status": 1
     },
     {
       "id": 2,
       "name": "my cluster 2",
       "status": 0,
-      "hosts": [
-        {
-          "id": 289
-        },
-        {
-          "id": 28
-        }
-      ],
-      "base": {
-        "version": "1.2.0",
-        "deployUser": "easy",
-        "deployPath": "/home/easy"
-      },
-      "roles": [
-        {
-          "roleName": "backend",
-          "dependHostId": 12,
-          "backendPort": 12345
-        },
-        {
-          "roleName": "frontend",
-          "dependHostId": 12,
-          "frontendPort": 8888
-        },
-        {
-          "roleName": "database",
-          "dependHostId": 12,
-          "databaseType": "mysql",
-          "dbName": "easy",
-          "account": "easy",
-          "password": "easy"
-        },
-        {
-          "roleName": "master",
-          "dependHostId": 12,
-          "masterMem": 1
-        },
-        {
-          "roleName": "worker",
-          "dependHostId": 12,
-          "workerMem": 1
-        },
-        {}
-      ]
     }
   ]
 }
@@ -462,9 +479,9 @@ page|int|true||分页数
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-currentPage|int|||当前页数
-rows|int|||总行数
-data|string|||日志内容
+currentPage|int| | |当前页数
+rows|int| | |总行数
+data|string| | |日志内容
 
 ## 执行结果信号接口
 
