Add host all feature and add google uuid pkg.

--- a/doc/backend/主机管理.md
+++ b/doc/backend/主机管理.md
@@ -91,21 +91,24 @@ deleteHost
 `接口类型：`
 
 ```
-GET
+POST
 /api/v1/deleteHost
+Content-Type:application/json
 ```
 
 `请求body`
 
 ```
-http://0.0.0.0:15523/api/v1/deleteHost?id=928
+{
+  "id": "3816512b"
+}
 ```
 
 `请求字段解释`
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-id|int|true||host的id
+id|string|true| |host的id
 
 `响应body` 成功逻辑
 
@@ -168,7 +171,7 @@ Content-Type:application/json
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-id|int|true| |host的id
+id|string|true| |host的id
 ip|string|true| |host的ip地址
 name|string|true| |host的别名
 port|int|true| |host的端口号，前端请控制端口号只能是1~65535区间
@@ -231,7 +234,7 @@ Content-Type:application/json
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-id|int|true| |主机id
+id|string|true| |主机id
 
 `响应body` 成功逻辑
 
@@ -344,7 +347,7 @@ page|int|true| |分页数
 --- | --- | --- | --- | ---
 currentPage|int| | |当前页
 total|int| | |host总数
-id|int| | |host的id
+id|string| | |host的id
 ip|string| | |host的ip地址
 name|string| | |host的别名
 remark|string| | |备注
